--- a/mobile/package.json
+++ b/mobile/package.json
@@ -13,11 +13,14 @@
     "expo": "~54.0.33",
     "expo-av": "^16.0.8",
     "expo-haptics": "^15.0.8",
+    "expo-secure-store": "^15.0.8",
     "expo-status-bar": "~3.0.9",
     "react": "19.1.0",
     "react-native": "0.81.5",
+    "react-native-get-random-values": "^2.0.0",
     "react-native-nfc-manager": "^3.17.2",
-    "react-native-reanimated": "^4.2.1"
+    "react-native-reanimated": "^4.2.1",
+    "uuid": "^13.0.0"
   },
   "devDependencies": {
     "@types/react": "~19.1.0",
