--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,9 +9,6 @@ services:
       - ./backend-node/database.sqlite:/app/database.sqlite
     environment:
       - PORT=3000
-  # Frontend would typically be built to static files, 
-  # but for dev composition we can run it or serve dist.
-  # frontend:
-  #   build: ./frontend
-  #   ports:
-  #     - "5173:5173"
+  # Frontend would typically be built and served by Nginx or similar in prod,
+  # or standard Vite dev server in dev.
+  # For simplicity, we just define backend here for the API service.
