--- a/backend-node/package.json
+++ b/backend-node/package.json
@@ -2,10 +2,14 @@
   "name": "backend-node",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "server.js",
+  "engines": {
+    "node": ">=18.0.0"
+  },
   "scripts": {
     "start": "node server.js",
-    "test": "jest"
+    "test": "jest",
+    "verify": "node test_verify.js"
   },
   "keywords": [],
   "author": "",
