--- a/mobile/package.json
+++ b/mobile/package.json
@@ -13,6 +13,7 @@
     "expo": "~54.0.33",
     "expo-av": "^16.0.8",
     "expo-haptics": "^15.0.8",
+    "expo-linking": "^8.0.11",
     "expo-location": "^19.0.8",
     "expo-network": "^8.0.8",
     "expo-secure-store": "^15.0.8",
