--- a/mobile/package.json
+++ b/mobile/package.json
@@ -17,6 +17,7 @@
     "expo-location": "^19.0.8",
     "expo-network": "^8.0.8",
     "expo-secure-store": "^15.0.8",
+    "expo-speech": "~14.0.8",
     "expo-status-bar": "~3.0.9",
     "react": "19.1.0",
     "react-native": "0.81.5",
