--- a/mobile/package.json
+++ b/mobile/package.json
@@ -16,9 +16,11 @@
     "expo-linking": "^8.0.11",
     "expo-location": "^19.0.8",
     "expo-network": "^8.0.8",
+    "expo-notifications": "~0.32.16",
     "expo-secure-store": "^15.0.8",
     "expo-speech": "~14.0.8",
     "expo-status-bar": "~3.0.9",
+    "expo-task-manager": "~14.0.9",
     "react": "19.1.0",
     "react-native": "0.81.5",
     "react-native-get-random-values": "^2.0.0",
